5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1636_652.log
== TEST (2019-04-15 13:08:47) 
-- CODE:
n1=int(input("numero de tres digitos :"))

if(100 <= n1 <= 999) :
	print("SIM")
	
else :
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:08:56) 
-- CODE:
n1=int(input("numero de tres digitos :"))

if(100 <= n1 <= 999) :
	print("SIM")
	
else :
	print("NAO")
-- EXECUTION TIME:
0.156087
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:09:15) 
-- CODE:
n1=int(input("numero de tres digitos :"))

if(100 <= n1 <= 999) :
	print("SIM")
	
else :
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:09:59) 
-- CODE:
n1=int(input("numero de tres digitos :"))

if(100 <= n1 <= 999) :
	print("SIM")
	
else :
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:11:57) 
-- CODE:
n1=int(input("numero de tres digitos :"))
x1= n1 // 100
if(100 <= n1 <= 999) :
print("SIM")
	
else :
	print("NAO")
-- ERROR:
File "XXXX", line 4
    print("SIM")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:12:05) 
-- CODE:
n1=int(input("numero de tres digitos :"))
x1= n1 // 100

if(100 <= n1 <= 999) :
	print("SIM")
	
else :
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:12:10) 
-- CODE:
n1=int(input("numero de tres digitos :"))
x1= n1 // 100

if(100 <= n1 <= 999) :
	print("SIM")
	
else :
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:12:31) 
-- CODE:
n1=int(input("numero de tres digitos :"))
x1= n1 // 100

if(x1 <= n1 <= 999) :
	print("SIM")
	
else :
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:31) 
-- CODE:
n1=int(input("numero de tres digitos :"))
x1= n1 % 100

if(n1%x1==0) :
	print("SIM")
	
else :
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:56) 
-- CODE:
n1=int(input("numero de tres digitos :"))
x1= n1 % 100

if(n1 % x1 == 0) :
	print("SIM")
	
else :
	print("NAO")
-- EXECUTION TIME:
0.168007
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
